adds config doc file

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,12 @@ graphql_markdown-*.tar
 # Temporary files, for example, from tests.
 /tmp/
 
-/guides
+guides/enums.md
+guides/graphql_schema.md
+guides/inputs.md
+guides/interfaces.md
+guides/mutations.md
+guides/objects.md
+guides/queries.md
+guides/scalars.md
+guides/unions.md
