--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,10 @@ jobs:
         exclude:
           - otp_version: 25
             elixir_version: 1.13.3
+          - otp_version: 26
+            elixir_version: 1.13.3
+          - otp_version: 26
+            elixir_version: 1.14.3
     steps:
       - uses: actions/checkout@v4
 
