--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04, ubuntu-20.04]
-        elixir_version: [1.13.3, 1.14.3, 1.15, 1.16]
+        elixir_version: [1.15, 1.16]
         otp_version: [24, 25, 26]
-        exclude:
-          - otp_version: 25
-            elixir_version: 1.13.3
-          - otp_version: 26
-            elixir_version: 1.13.3
-          - otp_version: 26
-            elixir_version: 1.14.3
     steps:
       - uses: actions/checkout@v4
 
