--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
   dialyzer:
     runs-on: ubuntu-22.04
     env:
-      MIX_ENV: test
+      MIX_ENV: dev
 
     steps:
       - uses: actions/checkout@v4
@@ -114,7 +114,7 @@ jobs:
   check_format:
     runs-on: ubuntu-22.04
     env:
-      MIX_ENV: test
+      MIX_ENV: dev
 
     steps:
       - uses: actions/checkout@v4
